# SDRPlusPlus-iak

./: CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1  readme.md
.github/workflows/: build_all.yml
android/app/: build.gradle
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp
core/libcorrect/tools/: find_conv_optim_poly.c  find_conv_optim_poly_annealing.c
core/src/: core.cpp  json.hpp
core/src/signal_path/: source.cpp
decoder_modules/dab_decoder/: CMakeLists.txt
decoder_modules/m17_decoder/: CMakeLists.txt
docker_builds/debian_sid/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
sink_modules/android_audio_sink/src/: main.cpp
source_modules/airspy_source/: CMakeLists.txt
source_modules/airspy_source/src/: main.cpp
source_modules/airspyhf_source/: CMakeLists.txt
source_modules/airspyhf_source/src/: main.cpp
source_modules/hackrf_source/: CMakeLists.txt
source_modules/hackrf_source/src/: main.cpp
source_modules/hydrasdr_source/: CMakeLists.txt
source_modules/hydrasdr_source/src/: main.cpp
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/qmx_source/: CMakeLists.txt
source_modules/qmx_source/libqmx/: CMakeLists.txt
source_modules/qmx_source/src/: main.cpp
source_modules/qmxserver_source/: CMakeLists.txt
source_modules/qmxserver_source/src/: main.cpp  qmxserver_client.cpp  qmxserver_client.h  qmxserver_protocol.h
source_modules/qmxserver_source/src/enet/: CMakeLists.txt
source_modules/rtl_sdr_source/: CMakeLists.txt
source_modules/rtl_sdr_source/src/: main.cpp
(+14 files in other folders)
